hard-gists/b1ef03dd21e7a3016161/run.log
=== Docker Run Log for b1ef03dd21e7a3016161 ===
Started at: Mi 29. Okt 19:24:32 CET 2025

[2025-10-29 19:24:32] START: Running container for b1ef03dd21e7a3016161
[2025-10-29 19:24:33] SUCCESS: Container eb7e7e902582f5da3bb0dfcad89f1b6023eddeae9838fd020921852b29bb95bc started for b1ef03dd21e7a3016161
=== Container logs for b1ef03dd21e7a3016161 ===
  File "/snippet.py", line 36
    print "POSTING", c_url, json.dumps(payload)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b1ef03dd21e7a3016161 ===
[2025-10-29 19:24:35] INFO: Container eb7e7e902582f5da3bb0dfcad89f1b6023eddeae9838fd020921852b29bb95bc has stopped
